--- a/BookStore/Areas/Admin/Views/Login/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Login/Index.cshtml
@@ -15,11 +15,11 @@
     @*Google Font: Source Sans Pro*@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     @*Font Awesome*@
-    <link rel="stylesheet" href="~/Assets/Admin/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Admin/plugins/fontawesome-free/css/all.min.css")">
     @*icheck bootstrap*@
-    <link rel="stylesheet" href="~/Assets/Admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css")">
     @*Theme style*@
-    <link rel="stylesheet" href="~/Assets/Admin/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Admin/dist/css/adminlte.min.css")">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -93,11 +93,11 @@
     </div>
     <!-- /.login-box -->
     <!-- jQuery -->
-    <script src="~/Assets/Admin/plugins/jquery/jquery.min.js"></script>
+    <script src="@Url.Content("~/Assets/Admin/plugins/jquery/jquery.min.js")"></script>
     <!-- Bootstrap 4 -->
-    <script src="~/Assets/Admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="@Url.Content("~/Assets/Admin/plugins/bootstrap/js/bootstrap.bundle.min.js")"></script>
     <!-- AdminLTE App -->
-    <script src="~/Assets/Admin/dist/js/adminlte.min.js"></script>
+    <script src="@Url.Content("~/Assets/Admin/dist/js/adminlte.min.js")"></script>
 </body>
 </html>
 
