--- a/BookStore/Areas/Admin/Views/Managers/ChartNewRegister.cshtml
+++ b/BookStore/Areas/Admin/Views/Managers/ChartNewRegister.cshtml
@@ -9,7 +9,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="~/Assets/Admin/js/Chart.js"></script>
+    <script src="@Url.Content("~/Assets/Admin/js/Chart.js")"></script>
 </head>
 <body>
     <div class="d-flex">
