--- a/BookStore/Areas/Admin/Views/Products/Edit.cshtml
+++ b/BookStore/Areas/Admin/Views/Products/Edit.cshtml
@@ -11,13 +11,13 @@
 
 @section jsFooter{
     <script>
-    var editor = CKEDITOR.replace('txtContent', {
-        customConfig: '~/Assets/Admin/ckeditor/config.js'
-    })
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: "~/Assets/Admin/ckeditor/config.js"
+        })
 
-    var editor2 = CKEDITOR.replace('txtContent2', {
-        customConfig: '~/Assets/Admin/ckeditor/config.js'
-    })
+        var editor2 = CKEDITOR.replace('txtContent2', {
+            customConfig: "~/Assets/Admin/ckeditor/config.js"
+        })
     </script>
 }
 
