--- a/BookStore/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/BookStore/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -15,7 +15,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="~/Admin/Managers/Index" class="brand-link">
-        <img src="~/Assets/Admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+        <img src="@Url.Content("~/Assets/Admin/dist/img/AdminLTELogo.png")" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">PN Managers</span>
     </a>
 
@@ -24,7 +24,7 @@
         <!-- Sidebar user (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="~/Assets/Admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                <img src="@Url.Content("~/Assets/Admin/dist/img/user2-160x160.jpg")" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a href="#" class="d-block">@name</a>
@@ -67,25 +67,25 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/admin" class="nav-link">
+                            <a href="@Url.Action("Index", "Managers", new {area="admin"})" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Quản trị viên</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/ManagerGroups/Index" class="nav-link">
+                            <a href="@Url.Action("Index", "ManagerGroups", new {area="admin"})" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Nhóm quản trị viên</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/admin/quan-li-don-hang" class="nav-link">
+                            <a href="@Url.Action("Index", "Carts", new {area="admin"})" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Đơn hàng</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/Users/Index" class="nav-link">
+                            <a href="@Url.Action("Index", "Users", new {area="admin"})" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Khách hàng</p>
                             </a>
@@ -102,14 +102,14 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/admin/quan-li-san-pham" class="nav-link">
+                            <a href="@Url.Action("Index", "Products", new {area="admin"})" class="nav-link">
                             @*<a href="/quan-li-san-phampnbooks" class="nav-link">*@
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Danh sách sản phẩm</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/ProductCategories/Index" class="nav-link">
+                            <a href="@Url.Action("Index", "ProductCategories", new {area="admin"})" class="nav-link">
                             @*<a href="/quan-li-danh-muc-san-phampnbooks" class="nav-link">*@
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Danh mục sản phẩm</p>
