--- a/BookStore/Areas/Admin/Views/Managers/SalesChart.cshtml
+++ b/BookStore/Areas/Admin/Views/Managers/SalesChart.cshtml
@@ -5,8 +5,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="~/Scripts/jquery-3.4.1.js"></script>
-    <script src="~/Assets/Admin/js/Chart.js"></script>
+    <script src="@Url.Content("~/Scripts/jquery-3.4.1.js")"></script>
+    <script src="@Url.Content("~/Assets/Admin/js/Chart.js")"></script>
 </head>
 <body>
     <div class="d-flex">
