--- a/BookStore/Areas/Admin/Views/Products/Create.cshtml
+++ b/BookStore/Areas/Admin/Views/Products/Create.cshtml
@@ -11,12 +11,12 @@
 
 @section jsFooter{
     <script>
-    var editor = CKEDITOR.replace('txtContent', {
-        customConfig: '~/Assets/Admin/ckeditor/config.js'
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: "~/Assets/Admin/ckeditor/config.js"
     })
 
-    var editor2 = CKEDITOR.replace('txtContent2', {
-        customConfig: '~/Assets/Admin/ckeditor/config.js'
+        var editor2 = CKEDITOR.replace('txtContent2', {
+            customConfig: "~/Assets/Admin/ckeditor/config.js"
     })
     </script>
 }
