--- a/BookStore/Areas/Admin/Views/Products/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Products/Index.cshtml
@@ -11,8 +11,38 @@
 }
 
 @section jsFooter{
-    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-    <script src="~/Assets/Admin/js/controller/managerController.js"></script>
+    <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")"></script>
+    @*<script src="~/Assets/Admin/js/controller/managerController.js"></script>*@
+    <script>
+        var manager = {
+            init: function () {
+                manager.registerEvents();
+            },
+            registerEvents: function () {
+                $('.btn-active').off('click').on('click', function (e) {
+                    e.preventDefault();
+                    var btn = $(this);
+                    var id = btn.data('id');
+                    $.ajax({
+                        url: "@Url.Action("ChangeStatus", "Managers", new { area = "admin" })",
+                        data: { id: id },
+                        dataType: 'json',
+                        type: 'POST',
+                        success: function (response) {
+                            if (response.status == true) {
+                                btn.text('Kích hoạt');
+                            }
+                            else {
+                                btn.text('Khóa');
+                            }
+                        }
+                    })
+                })
+            }
+        }
+
+        manager.init();
+    </script>
     <script type="text/javascript">
         $(function () {
             $('th a, tfoot tr td a').on('click', function () {
@@ -139,13 +169,13 @@ grid.Column("ViewCout","Lượt mua"),
 grid.Column("ProductCategory.Name","Thể loại"),
 grid.Column("Chức năng", format: @<text>
     <a href="@Url.Action("Edit",
-                                new { id = item.ID.ToString().Trim()})" class="edit-btn"><abbr title="Cập nhật dữ liệu"><img src="/images/edit.png" width="20" height="20" /></abbr></a>
+                                new { id = item.ID.ToString().Trim()})" class="edit-btn"><abbr title="Cập nhật dữ liệu"><img src="@Url.Content("~/images/edit.png")" width="20" height="20" /></abbr></a>
     <a href="@Url.Action("Details",
-                                new { id = item.ID.ToString().Trim()})" class="edit-btn"><abbr title="Xem chi tiết"><img src="/images/details.png" width="20" height="20" /></abbr></a>
+                                new { id = item.ID.ToString().Trim()})" class="edit-btn"><abbr title="Xem chi tiết"><img src="@Url.Content("~/images/details.png")" width="20" height="20" /></abbr></a>
     <a href="@Url.Action("Delete",
                                 new { id = item.ID.ToString().Trim()})" class="edit-btn">
         <abbr title="Xóa dữ liệu">
-            <img src="/images/delete.png" width="20" height="20" />
+            <img src="@Url.Content("~/images/delete.png")" width="20" height="20" />
         </abbr>
     </a>
 </text>),
