fix error on Login and Register page: content="width=device-width, initial-scale=1.0"

--- a/BookStore/Views/UserSession/Login.cshtml
+++ b/BookStore/Views/UserSession/Login.cshtml
@@ -4,51 +4,63 @@
     Layout = null;
 }
 
-<link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
-<!-- Main css -->
-<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
-<link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/css/style.css")">
-
-<div class="flex">
-    <div class="container mt-2">
-        <div class="signin-content">
-            <div class="signin-image">
-                <figure><img src="@Url.Content("~/Assets/Client/usersession/images/signin-image.jpg")" alt="sing up image"></figure>
-                <a class="signup-image-link" href="@Url.Action("Register","UserSession")" di>Create an account</a>
-            </div>
-            <div class="signin-form">
-                <h2 class="form-title">Sign in</h2>
-                <form method="POST" class="register-form" id="login-form" @*name="returnUrl" value="@ViewBag.returnUrl"*@>
-                    @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        @Html.EditorFor(model => model.EMailorUserName, new { htmlAttributes = new { @placeholder = "Email or Username" } })
-                        @Html.ValidationMessageFor(model => model.EMailorUserName, "", new { @class = "text-danger" })
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng nhập</title>
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
+    <!-- Main css -->
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/css/style.css")">
+</head>
+<body>
+    <div class="flex">
+        <div class="container mt-2">
+            <div class="signin-content">
+                <div class="signin-image">
+                    <figure><img src="@Url.Content("~/Assets/Client/usersession/images/signin-image.jpg")" alt="sing up image"></figure>
+                    <a class="signup-image-link" href="@Url.Action("Register","UserSession")" di>Create an account</a>
+                </div>
+                <div class="signin-form">
+                    <h2 class="form-title">Sign in</h2>
+                    <form method="POST" class="register-form" id="login-form" @*name="returnUrl" value="@ViewBag.returnUrl"*@>
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            @Html.EditorFor(model => model.EMailorUserName, new { htmlAttributes = new { @placeholder = "Email or Username" } })
+                            @Html.ValidationMessageFor(model => model.EMailorUserName, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder = "Password" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" name="RememberMe" value="1" id="remember-me" class="agree-term" />
+                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
+                        </div>
+                        <div class="form-group form-button">
+                            <input type="submit" name="signin" id="signin" class="form-submit" value="Đăng nhập" />
+                        </div>
+                    </form>
+                    <div class="social-login">
+                        <span class="social-label">Or login with</span>
+                        <ul class="socials">
+                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
+                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
+                            <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
+                        </ul>
                     </div>
-                    <div class="form-group">
-                        <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder = "Password" } })
-                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" name="RememberMe" value="1" id="remember-me" class="agree-term" />
-                        <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
-                    </div>
-                    <div class="form-group form-button">
-                        <input type="submit" name="signin" id="signin" class="form-submit" value="Đăng nhập" />
-                    </div>
-                </form>
-                <div class="social-login">
-                    <span class="social-label">Or login with</span>
-                    <ul class="socials">
-                        <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
-                        <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
-                        <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
+
+
 
