--- a/BookStore/Views/UserSession/Register.cshtml
+++ b/BookStore/Views/UserSession/Register.cshtml
@@ -4,58 +4,68 @@
     Layout = null;
 }
 
-<link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
-<!-- Main css -->
-<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
-<link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/css/style.css")">
-
-<div class="flex">
-    <div class="container mt-2">
-        <div class="signup-content">
-            <div class="signup-form my-auto">
-                <h2 class="form-title">Sign up</h2>
-                <form method="POST" class="register-form" id="register-form">
-                    @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @placeholder = "Họ và tên" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @placeholder = "Tên đăng nhập" } })
-                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="email"><i class="zmdi zmdi-email"></i></label>
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @placeholder = "Email" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder = "Mật khẩu" } })
-                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @placeholder = "Số điện thoại" } })
-                        @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @placeholder = "Địa chỉ" } })
-                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group form-button">
-                        <input type="submit" name="signup" id="signup" class="form-submit" value="Đăng kí" />
-                    </div>
-                </form>
-            </div>
-            <div class="signup-image">
-                <figure><img src="@Url.Content("~/Assets/Client/usersession/images/signup-image.jpg")" alt="sing up image"></figure>
-                <a href="@Url.Action("Login","UserSession")" class="signup-image-link">I am already member</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng kí</title>
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
+    <!-- Main css -->
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/css/style.css")">
+</head>
+<body>
+    <div class="flex">
+        <div class="container mt-2">
+            <div class="signup-content">
+                <div class="signup-form my-auto">
+                    <h2 class="form-title">Sign up</h2>
+                    <form method="POST" class="register-form" id="register-form">
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @placeholder = "Họ và tên" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @placeholder = "Tên đăng nhập" } })
+                            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="email"><i class="zmdi zmdi-email"></i></label>
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @placeholder = "Email" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="pass"><i class="zmdi zmdi-lock"></i></label>
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder = "Mật khẩu" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @placeholder = "Số điện thoại" } })
+                            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @placeholder = "Địa chỉ" } })
+                            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group form-button">
+                            <input type="submit" name="signup" id="signup" class="form-submit" value="Đăng kí" />
+                        </div>
+                    </form>
+                </div>
+                <div class="signup-image">
+                    <figure><img src="@Url.Content("~/Assets/Client/usersession/images/signup-image.jpg")" alt="sing up image"></figure>
+                    <a href="@Url.Action("Login","UserSession")" class="signup-image-link">I am already member</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
